Troubleshooting x overflow issue

--- a/scss/base/_media-queries.scss
+++ b/scss/base/_media-queries.scss
@@ -63,4 +63,7 @@
             padding-left: 0px;
         }
     }
+    .certification-container {
+        width: 100%;
+    }
 }
