--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,7 @@ body{
     position: relative;
     z-index: -2;
     background-color: black;
+    overflow-x: hidden;
 }
 
 h3{
